# flog

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Justfile  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  dependency-review.yml  gitleaks.yml  markdown-links.yml  openssf-scorecard.yml  release.yml  slsa.yml  test.yml
cmake/: add_cmocka_test.cmake
man/: flog.1  flog.1.md  flog.md  gen-doc
src/: CMakeLists.txt  common.c  common.h  config.c  config.h  defs.h  flog.c  flog.h  main.c  meson.build  testing.h  utils.c  utils.h
test/: CMakeLists.txt  test_common.c  test_config.c  testing.h
tool/: codeql-analyse-database  codeql-create-database
